log
Wed 06 Sep 2023 04:57:49 PM UTC: 
 tests:  0|6
total_score: 0/70
c3cf88f
Wed 06 Sep 2023 05:21:29 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
00d3642
Wed 06 Sep 2023 05:23:19 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:11: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   58 |       mapa->buckets[i] = NULL;
      |       ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8bb4c45
Wed 06 Sep 2023 05:24:34 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
1e0843c
Wed 06 Sep 2023 05:31:21 PM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
11bbd47
Wed 06 Sep 2023 05:31:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c126e35
Wed 06 Sep 2023 06:16:39 PM UTC: 
 hashmap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:22: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   54 |         map->buckets = dato;
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
68684d1
Wed 06 Sep 2023 06:16:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d2e9c53
Wed 06 Sep 2023 06:18:15 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
ea6655f
Wed 06 Sep 2023 06:19:14 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
2cee6ae
Wed 06 Sep 2023 06:22:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
809c87b
Wed 06 Sep 2023 06:24:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3eacac9
Wed 06 Sep 2023 06:25:30 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
1f04004
Wed 06 Sep 2023 06:26:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
4560cf6
Wed 06 Sep 2023 06:32:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
41b8640
Wed 06 Sep 2023 06:34:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
05b4f5a
Wed 06 Sep 2023 06:36:04 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
13412cb
Wed 06 Sep 2023 06:38:04 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
a65e3e8
Wed 06 Sep 2023 06:46:51 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:62:3: error: expected identifier or ‘(’ before ‘}’ token
   62 |   } else {
      |   ^
hashmap.c:62:5: error: expected identifier or ‘(’ before ‘else’
   62 |   } else {
      |     ^~~~
hashmap.c:66:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   66 |   map->size += 1;
      |      ^~
hashmap.c:68:1: error: expected identifier or ‘(’ before ‘}’ token
   68 | }
      | ^
Compilation failed
1cff8e3
Wed 06 Sep 2023 06:47:30 PM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|5
total_score: 20/70
612defc
Wed 06 Sep 2023 06:56:30 PM UTC: 
 hashmap.c | 20 ++++++--------------
 1 file changed, 6 insertions(+), 14 deletions(-)
 tests:  5|4
total_score: 30/70
2bd2d0a
Wed 06 Sep 2023 06:57:26 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
19d4563
Wed 06 Sep 2023 07:23:05 PM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:97:3: error: expected ‘,’ or ‘;’ before ‘while’
   97 |   while (i < map->capacity){
      |   ^~~~~
hashmap.c:96:7: error: unused variable ‘i’ [-Werror=unused-variable]
   96 |   int i = 0
      |       ^
hashmap.c:95:7: error: unused variable ‘indice’ [-Werror=unused-variable]
   95 |   int indice = hash(key, map->capacity);
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5b5f25b
Wed 06 Sep 2023 07:23:36 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:100:17: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
  100 |       return map->current;
      |              ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1a33f99
Wed 06 Sep 2023 07:26:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
c3ea3dd
Wed 06 Sep 2023 07:27:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
4084cb7
Wed 06 Sep 2023 08:04:11 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  11|2
total_score: 50/70
e740f60
Wed 06 Sep 2023 08:12:56 PM UTC: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
680b6cd
Wed 06 Sep 2023 08:15:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
b0322da
Wed 06 Sep 2023 08:15:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
755a719
